[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["see"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
python-jose = "^3.3.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
